--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="row-short">
             <img class="logo" src="./img/logo.png" alt="Logo">
             <h1 class="main-title">Coming soon</h1>
-            <p class="main-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima unde necessitatibus nulla debitis suscipit quae dignissimos aspernatur, fuga ab perferendis?</p>
+            <p class="main-description">An awesome new company for web resources is coming very soon. Enter your email to reques an early invitation!</p>
         </div>
     </header>
 
@@ -28,11 +28,11 @@
         <div class="row">
             <div class="column">
                 <h2 class="section-title">About startup</h2>
-                <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio molestias tenetur qui repellendus maxime, aliquid possimus id quisquam amet iusto reiciendis, <a href="#">Matrox</a> consequuntur dolor corrupti exercitationem consectetur hic sequi!</p>
+                <p class="section-description">Matrox material design multi-purpose html template. It comes with huge content and background variants. <a href="#">Metrox</a> is coming soon very soon. We are nearly here</p>
             </div>
             <div class="column">
                 <h2 class="section-title">Have any question?</h2>
-                <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum beatae vel at corrupti architecto <a href="mailto:mano@pastas.lt">mano@pastas.lt</a> totam neque cupiditate nesciunt suscipit animi consequatur, ducimus quo, molestias quae?</p>
+                <p class="section-description">You can use contact form bellow or contact us via e-mail at <a href="#">trendytheme.net@gmail.com</a>. Contact form is fully working and very easy to customize. </p>
             </div>
         </div>
     </main>
@@ -45,7 +45,7 @@
                 <p>All rights reserved</p>
                 <p>Designed by <a href="#">TrendyTheme</a></p>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem assumenda incidunt, accusantium facilis ipsam consectetur sed, <a href="#">200+</a> magnam, provident voluptas saepe. Est facilis temporibus enim <a href="#">Matrox</a> quae distinctio.</p>
+            <p>Metrox pack includes complete websites post just homepades, it coms with full website demos. Over <a href="#">200+</a> ready html files only for 175 Phurchase <a href="#">Metrox</a> Now</p>
         </div>
     </footer>
 </body>
