--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./css/components/clock.css">
     <link rel="stylesheet" href="./css/components/mouse.css">
     <link rel="stylesheet" href="./css/components/progress-bar.css">
+    <link rel="stylesheet" href="./css/components/forms.css">
     <!-- custom page -->
     <link rel="stylesheet" href="./css/pages/coming-soon.css">
 </head>
@@ -30,7 +31,7 @@
         <div class="row-short">
             <img class="logo" src="./img/logo.png" alt="Logo">
             <h1 class="main-title">Coming soon</h1>
-            <p class="main-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima unde necessitatibus nulla debitis suscipit quae dignissimos aspernatur, fuga ab perferendis?</p>
+            <p class="main-description">An awsome new company for web resources is coming very soon. Enter your email to request an early invitation</p>
             <div class="clock">
                 <div class="time">
                     <div class="value">328</div>
@@ -49,6 +50,17 @@
                     <div class="label">Seconds</div>
                 </div>
             </div>
+            <form class="form">
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input id="email" type="email" name="email" value="" maxlength="50" placeholder="Your email" required>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <button type="submit">Subscribe</button>
+                </div>
+            </form>
             <div class="mouse"></div>
         </div>
     </header>
@@ -57,7 +69,7 @@
         <div class="row">
             <div class="column">
                 <h2 class="section-title">About startup</h2>
-                <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio molestias tenetur qui repellendus maxime, aliquid possimus id quisquam amet iusto reiciendis, <a href="#">Matrox</a> consequuntur dolor corrupti exercitationem consectetur hic sequi!</p>
+                <p class="section-description">Matrox meterial design multi-purpose html template. It comes with huge content and background variants. <a href="#">Matrox</a> is coming very soon. We are nearly there.</p>
                 <div class="progress-bar">
                     <div class="top">
                         <div>UX design</div>
@@ -88,7 +100,28 @@
             </div>
             <div class="column">
                 <h2 class="section-title">Have any question?</h2>
-                <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum beatae vel at corrupti architecto <a href="mailto:mano@pastas.lt">mano@pastas.lt</a> totam neque cupiditate nesciunt suscipit animi consequatur, ducimus quo, molestias quae?</p>
+                <p class="section-description">You can use contact form below or contact us via e-mail at <a href="mailto:trendytheme.net@gmail.com">trendytheme.net@gmail.com</a>. Contact form is fully working and very easy to customize.</p>
+                <form class="form">
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="first-name">Name</label>
+                            <input id="first-name" type="text" name="name" value="Vardenis" placeholder="Your name" maxlength="25" required autofocus>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input id="email" type="email" name="email" value="" maxlength="50" placeholder="Your email" required>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" minlength="20" maxlength="1000" placeholder="Your message" required></textarea>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <button type="submit">Send message</button>
+                    </div>
+                </form>
             </div>
         </div>
     </main>
@@ -112,7 +145,7 @@
                 <p>All rights reserved</p>
                 <p>Designed by <a href="#">TrendyTheme</a></p>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem assumenda incidunt, accusantium facilis ipsam consectetur sed, <a href="#">200+</a> magnam, provident voluptas saepe. Est facilis temporibus enim <a href="#">Matrox</a> quae distinctio.</p>
+            <p>Matrox pack includes complete websites not just homepages, its comes with full website demos. Over <a href="#">200+</a> ready html files only for 17$. Purchase <a href="#">Matrox</a> Now.</p>
         </div>
     </footer>
 </body>
