--- a/index.html
+++ b/index.html
@@ -73,19 +73,23 @@
                 <div class="progress-bar">
                     <div class="top">
                         <div>UX design</div>
-                        <div>90%</div>
+                        <div>60%</div>
                     </div>
                     <div class="bottom">
-                        <div class="bar"></div>
+                        <div class="bar" style="width: 60%;">
+                            <div class="value"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="progress-bar">
                     <div class="top">
                         <div>Web design</div>
-                        <div>87%</div>
+                        <div>85%</div>
                     </div>
                     <div class="bottom">
-                        <div class="bar" style="width: 87%;"></div>
+                        <div class="bar" style="width: 85%;">
+                            <div class="value"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="progress-bar">
@@ -94,7 +98,9 @@
                         <div>15%</div>
                     </div>
                     <div class="bottom">
-                        <div class="bar" style="width: 15%;"></div>
+                        <div class="bar" style="width: 15%;">
+                            <div class="value"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -105,7 +111,7 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label for="first-name">Name</label>
-                            <input id="first-name" type="text" name="name" value="Vardenis" placeholder="Your name" maxlength="25" required autofocus>
+                            <input id="first-name" type="text" name="name" value="Vardenis" placeholder="Your name" maxlength="25" required >
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
