--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 </head>
 
 <body>
-    <header class="container bg-blue hero">
+    <header class="container bg-blue hero ">
         <div class="row-short">
+            
             <img class="logo" src="./img/logo.png" alt="Logo">
             <h1 class="main-title">Coming soon</h1>
             <p class="main-description">An awsome new company for web resources is coming very soon. Enter your email to request an early invitation</p>
@@ -133,6 +134,7 @@
     </main>
 
     <footer class="container bg-blue">
+        
         <div class="row">
             <div class="socials">
                 <a href="#" class="fa fa-facebook"></a>
@@ -143,6 +145,7 @@
                 <a href="#" class="fa fa-instagram"></a>
                 <a href="#" class="fa fa-rss"></a>
             </div>
+            <a href=# class="back-to-top fa fa-angle-up"></a>
         </div>
         <div class="row-short">
             <img class="logo-white" src="./img/logo-white.png" alt="Logo">
